# 1D_GF_Infrared_NUC_Denoise

./: README.md
testDemo/: CMakeLists.txt  build.sh  guided_filter.cpp  guided_filter.hpp  main.cpp
